--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "publish-sb-1",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "dist/index.js",
+  "files": ["dist"],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
