--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "publish-sb-1",
-  "version": "0.1.0",
+  "name": "@choyal/publish-sb-1",
+  "version": "0.1.1",
   "private": false,
   "main": "dist/index.js",
+  "repositoryUrl": "https://github.com/rakeshchoyal92/storybook-publish.git",
   "files": ["dist"],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
